# mongodb-ai-playground

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: mongodb_rag_playground_wiki_voyageai_openai.ipynb
mongodb_ai_playground/: __init__.py  graphrag.js  graphrag_widget.py  index.css  index.js  rag_widget.py
